--- a/index.html
+++ b/index.html
@@ -3,16 +3,39 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&family=Viaoda+Libre&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <title>About me</title>
 </head>
 
 <body>
-    <h3 class="uppercase">Ссылки на мои соцсети:</h3>
+<header>
+    <h1> Добро пожаловать на мою страницу!</h1>
+</header>
+<main>
+    <section class="about">
+        <h2>Обо мне &#128420;</h2>
+        <p>Привет! Меня зовут Карина, и я увлекаюсь различными хобби.</p>
+    </section>
+    <section class="hobbies">
+        <h2>Мои увлечения</h2>
+        <ul>
+            <li>Просмотр сериалов</li>
+            <li>Путешествия</li>
+            <li>Фотография</li>
+            <li>Кулинария</li>
+        </ul>
+    </section>
+    </main>
+    <footer>
+        <h3 class="uppercase">Ссылки на мои соцсети:</h3>
     <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fkarina.shpilko%2F%3Flocale%3Dmk_MK">Facebook</a><br>
     <a href="https://x.com/emrata">Twitter</a><br>
     <a href="https://www.instagram.com/sshpilya/">Instagram</a>
-
+    </footer>
 </body>
 
 </html>
